--- a/lib/client/templates.html
+++ b/lib/client/templates.html
@@ -1,13 +1,21 @@
 <template name="apiKey">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6">
-            <h4 class="page-header">API Key</h4>
-            <p>To gain access to the WSL API, use the following API Key. Make sure to keep it super safe! <strong>If you'd like to generate a new key, click the "refresh" icon on the field below</strong>.</p>
-            <label class="sr-only" for="apiKey">Your API Key</label>
-            <div class="input-group">
-                <input type="text" readonly class="form-control" id="apiKey" placeholder="API Key" value="{{apiKey}}">
-                <div class="input-group-addon regenerate-api-key"><i class="fa fa-refresh"></i></div>
+    {{#if semanticUi}}
+        {{> formContainer
+            headerText=headerText
+            headerDescription=headerDescription
+            fields=fields
+            class="apiKeyForm" }}
+    {{else}}
+        <div class="field">
+            <div class="six wide field">
+                <h4 class="header">{{headerText}}</h4>
+                <p>To gain access to the WSL API, use the following API Key. Make sure to keep it super safe! <strong>If you'd like to generate a new key, click the "refresh" icon on the field below</strong>.</p>
+                <label class="sr-only" for="apiKey">Your API Key</label>
+                <div class="input-group">
+                    <input type="text" readonly class="form-control" id="apiKey" placeholder="API Key" value="{{apiKey}}">
+                    <div class="input-group-addon regenerate-api-key"><i class="fa fa-refresh"></i></div>
+                </div>
             </div>
         </div>
-    </div>
+    {{/if}}
 </template>
