--- a/lib/client/templates.html
+++ b/lib/client/templates.html
@@ -9,11 +9,11 @@
         <div class="field">
             <div class="six wide field">
                 <h4 class="header">{{headerText}}</h4>
-                <p>To gain access to the WSL API, use the following API Key. Make sure to keep it super safe! <strong>If you'd like to generate a new key, click the "refresh" icon on the field below</strong>.</p>
-                <label class="sr-only" for="apiKey">Your API Key</label>
+                <p>{{_ "keep_api_key_save"}}</p>
+                <label class="sr-only" for="apiKey">{{_ "api_key"}}</label>
                 <div class="input-group">
-                    <input type="text" readonly class="form-control" id="apiKey" placeholder="API Key" value="{{apiKey}}">
-                    <div class="input-group-addon regenerate-api-key"><i class="fa fa-refresh"></i></div>
+                    <input type="text" readonly class="form-control" id="apiKey" placeholder="{{_ "api_key"}}" value="{{apiKey}}">
+                    <div class="input-group-addon regenerate-api-key"><i class="icon refresh"></i></div>
                 </div>
             </div>
         </div>
